# xmlib

./: Cargo.toml  README.md
xmlib/: Cargo.toml
xmlib/src/: de.rs  error.rs  lib.rs  ser.rs
xmlib_derive/: Cargo.toml
xmlib_derive/src/: de.rs  lib.rs  parse.rs  ser.rs
xmlib_derive/tests/: read.rs  write.rs
