[package]
name = "xmlib_derive"
version = "0.1.0"
description = "Macros implementation of #[derive(Serialize, Deserialize)]"
edition = "2021"
homepage = "https://github.com/Akida31/xmlib"
license = "MIT OR Apache-2.0"
keywords = ["xml", "serialization"]
readme = "README.md"
repository = "https://github.com/Akida31/xmlib"
rust-version = "1.57.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "printing"]}
heck = "0.4"

[dev_dependencies]
xmlib = { path = "../xmlib" }
